# tri-mesh-toolkit

./: .gitignore  CHANGELOG  CMakeLists.txt  INSTALL  INSTALL.LINUX  Makefile  Makefile.LINUX  Makefile.LINUX.deprecated  README  README.md  mesh.off  mesh_base.off
cmake-modules/: FindATLAS.cmake  FindGSL.cmake  FindPETSc.cmake
doc/: README.org
include/: MeshTK.h  MeshViewer.h  MeshViewer.hh  README  TriMesh.h  TriMesh.hh  mesh_assist.h  mesh_assist.hh  mesh_io.h  mesh_topo.h  mesh_update.h  normal.h
include/geodesic/: geodesic_algorithm_exact.h  geodesic_mesh.h
include/meshtk/: DynamicTriMesh.hh  KeyPoint.hh  ManifoldTriMesh.hh  MeshAttributeType.hh  MeshViewer.hh  TriMesh.hh  lapack_wrapper.h  mesh_assist.hh  mesh_precompile.hh  mesh_topo.hh
src/: CMakeLists.txt  DynamicTriMesh.cc  MeshTK.cc  MeshViewer.cc  README  TriMesh.cc  eigen_solver.cc  main.cc  manifold.cc  mesh_assist.cc  mesh_update.cc  normal.cc  test.cc
src/example/: CMakeLists.txt  ex0.cc
src/meshtk/: CMakeLists.txt  DynamicTriMesh.cc  ManifoldTriMesh.cc  ManifoldTriMesh_PETSc.cc  MeshViewer.cc  TriMesh.cc  TriMesh_Base.cc  TriMesh_Curv.cc  TriMesh_Dist.cc  TriMesh_PETSc.cc  TriMesh_SIFT.cc  TriMesh_UI.cc  lapack_wrapper.c  mesh_assist.cc
