CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(tri_mesh_toolkit)


FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(CGAL REQUIRED)

LIST(APPEND CMAKE_MODULE_PATH cmake-modules)
FIND_PACKAGE(PETSc REQUIRED)
#FIND_PACKAGE(SLEPc REQUIRED)

INCLUDE_DIRECTORIES(include ${PETSC_INCLUDES} ${GLUT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
INCLUDE(${CGAL_USE_FILE})
ADD_DEFINITIONS(${PETSC_DEFINITIONS})

SET(CMAKE_CXX_FLAGS "-g -Wall")
SET(LIBS ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${PETSC_LIBRARIES})
#SET(SOLVER_LIBS ${SLEPC_LIBRARIES})

ADD_SUBDIRECTORY(src/meshtk lib)
ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(src/example example)
